--- a/src/app/course/course-list.component.html
+++ b/src/app/course/course-list.component.html
@@ -5,7 +5,7 @@
 
   <div>
     <!-- two way data binding -->
-    <input [(ngModel)]="filtrar" class="form-control">
+    <input [(ngModel)]="filter" class="form-control">
   </div>
 </div>
 
@@ -26,8 +26,8 @@
       <td> <img [src]="course.imageUrl" [alt]="course.name" width="40" height="40"> </td>
       <td>{{ course.name}}</td>
       <td>{{ course.price}}</td>
-      <td>{{ course.code}}</td>
-      <td>{{ course.releaseDate}}</td>
+      <td>{{ course.code | lowercase | replace: '-': ' '}}</td>
+      <td>{{ course.releaseDate | date: 'dd/MM/yyyy'}}</td>
       <td>
           <app-star [rating]="course.rating" ></app-star>
       </td>
