--- a/src/app/course/course-info.component.html
+++ b/src/app/course/course-info.component.html
@@ -1,1 +1,64 @@
-<h2>Course ID = {{courseId}} </h2>
+<h2>Course Info</h2>
+
+<hr/>
+
+<form #courseForm="ngForm" *ngIf="course">
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Name: </label>
+    <div class="col-sm-10">
+      <!-- two way data binding -->
+      <input [(ngModel)]="course.name" required name="name" #courseName="ngModel" [ngClass]="{'is-invalid': courseName.invalid}" class="form-control">
+
+      <div class="invalid-feedback">
+        Course name is required
+      </div>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Price: </label>
+    <div class="col-sm-10">
+      <!-- two way data binding -->
+      <input [(ngModel)]="course.price" required name="price" #coursePrice="ngModel" type="number" [ngClass]="{'is-invalid': coursePrice.invalid}" class="form-control">
+
+      <div class="invalid-feedback">
+        Course price is required
+      </div>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Rating: </label>
+    <div class="col-sm-10">
+      <!-- two way data binding -->
+      <input [(ngModel)]="course.rating" required name="rating" #courseRating="ngModel" type="number" [ngClass]="{'is-invalid': courseRating.invalid}" class="form-control">
+
+      <div class="invalid-feedback">
+        Course rating is required
+      </div>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Descrição: </label>
+    <div class="col-sm-10">
+      <!-- two way data binding -->
+      <textarea [(ngModel)]="course.description" required name="rating" #courseDescription="ngModel" [ngClass]="{'is-invalid': courseDescription.invalid}" class="form-control"></textarea>
+
+      <div class="invalid-feedback">
+        Course description is required
+      </div>
+    </div>
+  </div>
+
+  <button [disabled]="courseForm.invalid" (click)="save()" class="btn btn-primary mr-2">Save</button>
+  <button [routerLink]="['/courses']" class="btn btn-secondary">Back</button>
+
+</form>
