--- a/src/app/course/course-list.component.html
+++ b/src/app/course/course-list.component.html
@@ -3,9 +3,11 @@
 <div class="form-group row">
   <label class="col-sm-2 col-form-label">Filter By:</label>
 
-  <div>
+  <div class="col-sm-10">
     <!-- two way data binding -->
     <input [(ngModel)]="filter" class="form-control">
+
+
   </div>
 </div>
 
