--- a/src/app/course/course-list.component.html
+++ b/src/app/course/course-list.component.html
@@ -34,7 +34,7 @@
           <app-star [rating]="course.rating" ></app-star>
       </td>
       <td>
-        <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary mr-2">Edit</a>
+        <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary border">Edit</a>
         <button (click)="deletedById(course.id)" class="btn btn-danger" >Delete</button>
       </td>
     </tr>
